# brzozowski-regex.rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: automaton.rs  builder.rs  derivation.rs  display.rs  lib.rs  nullability.rs  ops.rs
src/builder/: pure.rs  similarity.rs
tests/: integration.rs
